<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_task_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_from_first_home_work"
        android:textSize="12sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/write_something_here_hint"
        android:textSize="12sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/just_button"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/MySwitchStyle" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_this_checkbox_hint"
        android:theme="@style/MyCheckBoxStyle" />

    <ToggleButton
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textSize="45sp" />

</LinearLayout>